--- a/Barycentric_coordinates_3/examples/Barycentric_coordinates_3/CMakeLists.txt
+++ b/Barycentric_coordinates_3/examples/Barycentric_coordinates_3/CMakeLists.txt
@@ -1,24 +1,19 @@
-# Created by the script cgal_create_cmake_script
+# Created by the script cgal_create_cmake_script.
 # This is the CMake script for compiling a CGAL application.
 
+project(Barycentric_coordinates_3_Examples)
 
 cmake_minimum_required(VERSION 3.1...3.15)
-project( Barycentric_coordinates_3_Examples )
+set(CMAKE_CXX_STANDARD 14)
 
+find_package(CGAL QUIET COMPONENTS Core)
+if(CGAL_FOUND)
 
-find_package(CGAL QUIET)
+  include(${CGAL_USE_FILE})
+  include(CGAL_CreateSingleSourceCGALProgram)
 
-if ( CGAL_FOUND )
-
-  # create a target per cppfile
-  file(GLOB cppfiles RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
-  foreach(cppfile ${cppfiles})
-    create_single_source_cgal_program( "${cppfile}" )
-  endforeach()
-
+  create_single_source_cgal_program("tetrahedron_coordinates.cpp")
+  
 else()
-
-    message(STATUS "This program requires the CGAL library, and will not be compiled.")
-
+  message(WARNING "This program requires the CGAL library, and will not be compiled.")
 endif()
-
