--- a/Barycentric_coordinates_3/test/Barycentric_coordinates_3/CMakeLists.txt
+++ b/Barycentric_coordinates_3/test/Barycentric_coordinates_3/CMakeLists.txt
@@ -13,6 +13,7 @@ if(CGAL_FOUND)
   include(CGAL_CreateSingleSourceCGALProgram)
 
   create_single_source_cgal_program("test_tetrahedron_coordinates.cpp")
+  create_single_source_cgal_program("test_wp_tetrahedron.cpp")
   
 else()
   message(WARNING "This program requires the CGAL library, and will not be compiled.")
