added tetrahedron vs wp test and the beggining of the general one

--- a/Barycentric_coordinates_3/test/Barycentric_coordinates_3/CMakeLists.txt
+++ b/Barycentric_coordinates_3/test/Barycentric_coordinates_3/CMakeLists.txt
@@ -14,7 +14,8 @@ if(CGAL_FOUND)
 
   create_single_source_cgal_program("test_tetrahedron_coordinates.cpp")
   create_single_source_cgal_program("test_wp_tetrahedron.cpp")
-  
+  create_single_source_cgal_program("test_wp_weights.cpp")
+
 else()
   message(WARNING "This program requires the CGAL library, and will not be compiled.")
 endif()
