--- a/Barycentric_coordinates_3/examples/Barycentric_coordinates_3/CMakeLists.txt
+++ b/Barycentric_coordinates_3/examples/Barycentric_coordinates_3/CMakeLists.txt
@@ -2,6 +2,7 @@
 # This is the CMake script for compiling a CGAL application.
 
 project(Barycentric_coordinates_3_Examples)
+set(CMAKE_CXX_FLAGS "${CMAXE_CXX_FLAGS} -Wall -Wextra -Werror")
 
 cmake_minimum_required(VERSION 3.1...3.15)
 set(CMAKE_CXX_STANDARD 14)
@@ -13,7 +14,8 @@ if(CGAL_FOUND)
   include(CGAL_CreateSingleSourceCGALProgram)
 
   create_single_source_cgal_program("tetrahedron_coordinates.cpp")
-  
+  create_single_source_cgal_program("shape_deformation.cpp")
+
 else()
   message(WARNING "This program requires the CGAL library, and will not be compiled.")
 endif()
