--- a/Polygon_mesh_processing/examples/Polygon_mesh_processing/CMakeLists.txt
+++ b/Polygon_mesh_processing/examples/Polygon_mesh_processing/CMakeLists.txt
@@ -9,6 +9,7 @@ find_package(CGAL REQUIRED)
 
 create_single_source_cgal_program("sample_example.cpp" )
 create_single_source_cgal_program("extrude.cpp" )
+create_single_source_cgal_program( "list_non_pure_triangle_meshes.cpp" )
 create_single_source_cgal_program("polyhedral_envelope.cpp" )
 create_single_source_cgal_program("polyhedral_envelope_of_triangle_soup.cpp" )
 create_single_source_cgal_program("polyhedral_envelope_mesh_containment.cpp" )
