Refactor: camera manipulator bpa moved to its own class by deriving from camera_manip

--- a/Arrangement_on_surface_2/demo/earth/CMakeLists.txt
+++ b/Arrangement_on_surface_2/demo/earth/CMakeLists.txt
@@ -57,6 +57,7 @@ file(GLOB source_files_graphics
   Camera.h                  Camera.cpp
   Camera_manip.h            Camera_manip.cpp
   Camera_manip_rot.h        Camera_manip_rot.cpp
+  Camera_manip_rot_bpa.h    Camera_manip_rot_bpa.cpp
   Shader_program.h          Shader_program.cpp
  )
 source_group( "Graphics"  FILES ${source_files_graphics} )
