Added: Timer class to time the computation of the approximation of country borders

--- a/Arrangement_on_surface_2/demo/earth/CMakeLists.txt
+++ b/Arrangement_on_surface_2/demo/earth/CMakeLists.txt
@@ -91,6 +91,7 @@ file(GLOB source_files
   Common_defs.h
                             main.cpp
   Main_widget.h             Main_widget.cpp
+  Timer.h
   Tools.h                   Tools.cpp
  )
 source_group( "Source Files"  FILES ${source_files} )
