--- a/Polygon_repair_2/test/Polygon_repair_2/CMakeLists.txt
+++ b/Polygon_repair_2/test/Polygon_repair_2/CMakeLists.txt
@@ -2,7 +2,7 @@
 # This is the CMake script for compiling a CGAL application.
 
 cmake_minimum_required(VERSION 3.1...3.23)
-project(Polygon_repair_2_Examples)
+project(Polygon_repair_2_Tests)
 
 find_package(CGAL REQUIRED)
 
