extend the testsuite

--- a/Triangulation_3/test/Triangulation_3/CMakeLists.txt
+++ b/Triangulation_3/test/Triangulation_3/CMakeLists.txt
@@ -64,24 +64,39 @@ target_compile_features(test_CDT_3_insert_constrained_edge_from_OFF_file PUBLIC 
 target_compile_definitions(test_CDT_3_insert_constrained_edge_from_OFF_file PUBLIC CGAL_TEST_CDT_3_USE_CDT)
 cgal_add_test(test_CDT_3_insert_constrained_edge_from_OFF_file)
 
-add_test(NAME "execution   of  cdt_3_from_off cube"    COMMAND cdt_3_from_off ${CGAL_DATA_DIR}/meshes/cube.off    ${CMAKE_CURRENT_BINARY_DIR}/dump_output_cube.off)
-add_test(NAME "execution   of  cdt_3_from_off sphere"  COMMAND cdt_3_from_off ${CGAL_DATA_DIR}/meshes/sphere.off  ${CMAKE_CURRENT_BINARY_DIR}/dump_output_sphere.off)
-add_test(NAME "execution   of  cdt_3_from_off fandisk" COMMAND cdt_3_from_off ${CGAL_DATA_DIR}/meshes/fandisk.off ${CMAKE_CURRENT_BINARY_DIR}/dump_output_fandisk.off)
-add_test(NAME "execution   of  cdt_3_from_off mpi"     COMMAND cdt_3_from_off ${CGAL_DATA_DIR}/meshes/mpi.off     ${CMAKE_CURRENT_BINARY_DIR}/dump_output_mpi.off)
-add_test(NAME "execution   of  cdt_3_from_off 3torus"  COMMAND cdt_3_from_off ${CGAL_DATA_DIR}/meshes/3torus.off  ${CMAKE_CURRENT_BINARY_DIR}/dump_output_3torus.off)
+function(CGAL_add_cdt3_from_off_test data_name)
+  add_test(NAME "execution   of  cdt_3_from_off ${data_name}" COMMAND cdt_3_from_off ${CGAL_DATA_DIR}/meshes/${data_name}.off ${CMAKE_CURRENT_BINARY_DIR}/dump_output_${data_name}.off)
+  cgal_setup_test_properties("execution   of  cdt_3_from_off ${data_name}" cdt_3_from_off)
+endfunction()
+
+CGAL_add_cdt3_from_off_test("cube")
+CGAL_add_cdt3_from_off_test("sphere")
+CGAL_add_cdt3_from_off_test("fandisk")
+CGAL_add_cdt3_from_off_test("mpi")
+CGAL_add_cdt3_from_off_test("3torus")
+CGAL_add_cdt3_from_off_test("cheese-selection")
+CGAL_add_cdt3_from_off_test("cheese-selection-2")
+
+function(CGAL_add_cdt3_from_local_off_test data_name)
+  add_test(NAME "execution   of  cdt_3_from_off ${data_name}" COMMAND cdt_3_from_off ${CMAKE_CURRENT_SOURCE_DIR}/data/${data_name}.off ${CMAKE_CURRENT_BINARY_DIR}/dump_output_${data_name}.off)
+  cgal_setup_test_properties("execution   of  cdt_3_from_off ${data_name}" cdt_3_from_off)
+endfunction()
+
+CGAL_add_cdt3_from_local_off_test(cheese18)
+CGAL_add_cdt3_from_local_off_test(cheese28)
+CGAL_add_cdt3_from_local_off_test(cheese31)
+CGAL_add_cdt3_from_local_off_test(cheese36-bis)
+CGAL_add_cdt3_from_local_off_test(cheese36)
+CGAL_add_cdt3_from_local_off_test(cheese6-PLCerrorWithFace0)
+CGAL_add_cdt3_from_local_off_test(HexiCosPot-11)
+CGAL_add_cdt3_from_local_off_test(HexiCosPot-1)
+CGAL_add_cdt3_from_local_off_test(HexiCosPot-1-reduced)
+CGAL_add_cdt3_from_local_off_test(HexiCosPot-1-sv)
+CGAL_add_cdt3_from_local_off_test(HexiCosPot-1-sv-reduced)
+CGAL_add_cdt3_from_local_off_test(mpi-part)
+
 add_test(NAME "execution   of  cdt_3_from_off_CGAL_DEBUG_CDT_3 3torus" COMMAND cdt_3_from_off_CGAL_DEBUG_CDT_3 ${CGAL_DATA_DIR}/meshes/3torus.off)
-add_test(NAME "execution   of  cdt_3_from_off cheese-selection"     COMMAND cdt_3_from_off ${CGAL_DATA_DIR}/meshes/cheese-selection.off     ${CMAKE_CURRENT_BINARY_DIR}/dump_output_cheese-selection.off)
-add_test(NAME "execution   of  cdt_3_from_off cheese-selection-2"     COMMAND cdt_3_from_off ${CGAL_DATA_DIR}/meshes/cheese-selection-2.off     ${CMAKE_CURRENT_BINARY_DIR}/dump_output_cheese-selection-2.off)
-
-
-cgal_setup_test_properties("execution   of  cdt_3_from_off cube" cdt_3_from_off)
-cgal_setup_test_properties("execution   of  cdt_3_from_off sphere" cdt_3_from_off)
-cgal_setup_test_properties("execution   of  cdt_3_from_off fandisk" cdt_3_from_off)
-cgal_setup_test_properties("execution   of  cdt_3_from_off mpi" cdt_3_from_off)
-cgal_setup_test_properties("execution   of  cdt_3_from_off cheese-selection" cdt_3_from_off)
-cgal_setup_test_properties("execution   of  cdt_3_from_off cheese-selection-2" cdt_3_from_off)
 cgal_setup_test_properties("execution   of  cdt_3_from_off 3torus" cdt_3_from_off)
-cgal_setup_test_properties("execution   of  cdt_3_from_off_CGAL_DEBUG_CDT_3 3torus" cdt_3_from_off_CGAL_DEBUG_CDT_3)
 
 get_directory_property(all_tests TESTS)
 foreach(test ${all_tests})
