--- a/Arrangement_on_surface_2/demo/globus/CMakeLists.txt
+++ b/Arrangement_on_surface_2/demo/globus/CMakeLists.txt
@@ -72,8 +72,9 @@ if (CGAL_FOUND AND CGAL_Qt5_FOUND AND Qt5_FOUND)
                  ${CGAL_Qt5_MOC_FILES})
 
   # target_link_libraries(globus ${FileGDBAPI_LIBRARY})
-  target_link_libraries(globus Qt5::Core Qt5::Gui Qt5::Widgets)
-  target_link_libraries(globus CGAL::CGAL CGAL::CGAL_Qt5)
+  # target_link_libraries(globus PUBLIC CGAL::CGAL CGAL::CGAL_Qt5)
+  # target_link_libraries(globus Qt5::Core Qt5::Gui Qt5::Widgets)
+  target_link_libraries(globus CGAL::CGAL_Basic_viewer)
   target_link_libraries(globus nlohmann_json::nlohmann_json)
   if(CGAL_Core_FOUND)
     target_link_libraries(globus CGAL::CGAL_Core)
