started working on sphere-line intersection in GUI

--- a/Arrangement_on_surface_2/demo/earth/CMakeLists.txt
+++ b/Arrangement_on_surface_2/demo/earth/CMakeLists.txt
@@ -75,6 +75,7 @@ source_group( "Graphics"  FILES ${source_files_graphics} )
 # GRAPHICS-GEOMETRY (Graphics-related)
 file(GLOB source_files_graphics_geometry
   Line_strips.h             Line_strips.cpp
+  SingleVertex.h            SingleVertex.cpp
   Sphere.h                  Sphere.cpp
   Triangles.h               Triangles.cpp
   Vertices.h                Vertices.cpp
