refactor: moved triangulation code to a separate class

--- a/Arrangement_on_surface_2/demo/earth/CMakeLists.txt
+++ b/Arrangement_on_surface_2/demo/earth/CMakeLists.txt
@@ -53,8 +53,9 @@ link_directories(earth PRIVATE ${SHAPELIB_LIB_DIR})
 
 # AOS
 file(GLOB source_files_aos
-  Aos.h         Aos.cpp
+  Aos.h                 Aos.cpp
   Aos_defs.h
+  Aos_triangulator.h    Aos_triangulator.cpp
  )
 source_group( "Aos"  FILES ${source_files_aos} )
 
