refactor: added gui_event_handler base class & derived Camera_manip from this

--- a/Arrangement_on_surface_2/demo/earth/CMakeLists.txt
+++ b/Arrangement_on_surface_2/demo/earth/CMakeLists.txt
@@ -92,7 +92,8 @@ file(GLOB source_files_gui
   Camera_manip_rot.h        Camera_manip_rot.cpp
   Camera_manip_rot_bpa.h    Camera_manip_rot_bpa.cpp
   Camera_manip_zoom.h       Camera_manip_zoom.cpp
- )
+  GUI_event_handler.h       GUI_event_handler.cpp 
+)
 source_group( "GUI"  FILES ${source_files_gui} )
 
 
