--- a/Arrangement_on_surface_2/demo/earth/CMakeLists.txt
+++ b/Arrangement_on_surface_2/demo/earth/CMakeLists.txt
@@ -77,7 +77,7 @@ source_group( "Graphics"  FILES ${source_files_graphics} )
 # GRAPHICS-GEOMETRY (Graphics-related)
 file(GLOB source_files_graphics_geometry
   Line_strips.h             Line_strips.cpp
-  SingleVertex.h            SingleVertex.cpp
+  Single_vertex.h           Single_vertex.cpp
   Sphere.h                  Sphere.cpp
   Triangles.h               Triangles.cpp
   Vertices.h                Vertices.cpp
