cleanup Alpha_sphare_3 demo

--- a/AABB_tree/demo/AABB_tree/CMakeLists.txt
+++ b/AABB_tree/demo/AABB_tree/CMakeLists.txt
@@ -13,15 +13,11 @@ set(CMAKE_AUTOMOC ON)
 find_package(CGAL REQUIRED OPTIONAL_COMPONENTS Qt6)
 
 # Find Qt6 itself
-find_package(Qt6 QUIET COMPONENTS Gui)
+find_package(Qt6 QUIET COMPONENTS Gui OpenGL)
 
 if(CGAL_Qt6_FOUND AND Qt6_FOUND)
 
   qt6_wrap_ui(UI_FILES MainWindow.ui)
-
-  qt6_generate_moc("MainWindow.h" "${CMAKE_CURRENT_BINARY_DIR}/MainWindow_moc.cpp")
-  qt6_generate_moc("Viewer.h" "${CMAKE_CURRENT_BINARY_DIR}/Viewer_moc.cpp")
-  qt6_generate_moc("Scene.h" "${CMAKE_CURRENT_BINARY_DIR}/Scene_moc.cpp")
 
   qt6_add_resources(CGAL_Qt6_RESOURCE_FILES AABB_demo.qrc)
 
@@ -29,7 +25,7 @@ if(CGAL_Qt6_FOUND AND Qt6_FOUND)
     AABB_demo AABB_demo.cpp ${UI_FILES} ${CGAL_Qt6_RESOURCE_FILES}
   )
   # Link with Qt libraries
-  target_link_libraries(AABB_demo PRIVATE Qt6::Gui
+  target_link_libraries(AABB_demo PRIVATE Qt6::Gui Qt6::OpenGL
                                           CGAL::CGAL CGAL::CGAL_Qt6)
 
   add_to_cached_list(CGAL_EXECUTABLE_TARGETS AABB_demo)
