--- a/Circular_kernel_3/demo/Circular_kernel_3/CMakeLists.txt
+++ b/Circular_kernel_3/demo/Circular_kernel_3/CMakeLists.txt
@@ -12,18 +12,16 @@ endif()
 
 find_package(CGAL REQUIRED OPTIONAL_COMPONENTS Qt6)
 
-find_package(Qt6 QUIET COMPONENTS Widgets OpenGL OpenGLWidgets)
+find_package(Qt6 QUIET COMPONENTS Widgets OpenGL)
 
 if(CGAL_Qt6_FOUND AND Qt6_FOUND)
 
-  add_executable(
-    Circular_kernel_3 Circular_kernel_3.cpp Viewer.cpp
-                      ${CGAL_Qt6_RESOURCE_FILES} ${CGAL_Qt6_MOC_FILES})
+  add_executable(Circular_kernel_3 Circular_kernel_3.cpp Viewer.cpp)
 
   add_to_cached_list(CGAL_EXECUTABLE_TARGETS Circular_kernel_3)
 
   target_link_libraries(Circular_kernel_3 PRIVATE CGAL::CGAL CGAL::CGAL_Qt6
-                                                  Qt6::Widgets Qt6::OpenGL Qt6::OpenGLWidgets)
+                                                  Qt6::Widgets Qt6::OpenGL)
 
   include(${CGAL_MODULES_DIR}/CGAL_add_test.cmake)
   cgal_add_compilation_test(Circular_kernel_3)
