more cleanup of CMake scripts for Qt6

--- a/GraphicsView/demo/Alpha_shapes_2/CMakeLists.txt
+++ b/GraphicsView/demo/Alpha_shapes_2/CMakeLists.txt
@@ -12,17 +12,12 @@ if(CGAL_Qt6_FOUND AND Qt6_FOUND)
   add_definitions(-DQT_NO_KEYWORDS)
   set(CMAKE_INCLUDE_CURRENT_DIR ON)
   set(CMAKE_AUTOMOC ON)
-
-  # UI files (Qt Designer files)
-  qt6_wrap_ui(DT_UI_FILES Alpha_shapes_2.ui)
-
-  # qrc files (resources files, that contain icons, at least)
-  qt6_add_resources(CGAL_Qt6_RESOURCE_FILES ./Alpha_shapes_2.qrc)
+  set(CMAKE_AUTOUIC ON)
+  set(CMAKE_AUTORCC ON)
 
   # The executable itself.
-  add_executable(
-    Alpha_shapes_2 Alpha_shapes_2.cpp ${DT_UI_FILES} ${CGAL_Qt6_RESOURCE_FILES}
-                   ${CGAL_Qt6_MOC_FILES})
+  qt_add_executable(
+    Alpha_shapes_2 Alpha_shapes_2.cpp Alpha_shapes_2.ui Alpha_shapes_2.qrc)
 
   add_to_cached_list(CGAL_EXECUTABLE_TARGETS Alpha_shapes_2)
 
