--- a/GraphicsView/demo/Periodic_2_triangulation_2/CMakeLists.txt
+++ b/GraphicsView/demo/Periodic_2_triangulation_2/CMakeLists.txt
@@ -1,18 +1,9 @@
 cmake_minimum_required(VERSION 3.1...3.23)
 project(Periodic_2_triangulation_2_Demo)
 
-if(NOT POLICY CMP0070 AND POLICY CMP0053)
-  # Only set CMP0053 to OLD with CMake<3.10, otherwise there is a warning.
-  cmake_policy(SET CMP0053 OLD)
-endif()
-
-if(POLICY CMP0071)
-  cmake_policy(SET CMP0071 NEW)
-endif()
-
 find_package(CGAL REQUIRED OPTIONAL_COMPONENTS Qt6)
 
-find_package(Qt6 QUIET COMPONENTS Widgets OpenGLWidgets)
+find_package(Qt6 QUIET COMPONENTS Widgets)
 include_directories(BEFORE ./include)
 
 if(CGAL_Qt6_FOUND AND Qt6_FOUND)
@@ -35,7 +26,7 @@ if(CGAL_Qt6_FOUND AND Qt6_FOUND)
   source_group("QT" FILES ${QT_headers})
 
   # The executable itself.
-  add_executable(
+  qt_add_executable(
     Periodic_2_Delaunay_triangulation_2
     Periodic_2_Delaunay_triangulation_2.cpp
     ${DT_UI_FILES}
