--- a/GraphicsView/demo/Triangulation_2/CMakeLists.txt
+++ b/GraphicsView/demo/Triangulation_2/CMakeLists.txt
@@ -4,16 +4,9 @@
 cmake_minimum_required(VERSION 3.1...3.23)
 project(Triangulation_2_Demo)
 
-if(NOT POLICY CMP0070 AND POLICY CMP0053)
-  # Only set CMP0053 to OLD with CMake<3.10, otherwise there is a warning.
-  cmake_policy(SET CMP0053 OLD)
-endif()
-
-if(POLICY CMP0071)
-  cmake_policy(SET CMP0071 NEW)
-endif()
-
-set(CMAKE_AUTOMOC TRUE)
+set(CMAKE_AUTOMOC ON)
+set(CMAKE_AUTOUIC ON)
+set(CMAKE_AUTORCC ON)
 set(CMAKE_INCLUDE_CURRENT_DIR TRUE)
 
 find_package(CGAL REQUIRED OPTIONAL_COMPONENTS Qt6)
@@ -31,13 +24,10 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 # The "constrained Delaunay" demo: Constrained_Delaunay_triangulation_2
 #--------------------------------
 
-qt6_add_resources(CD_RES_FILE Constrained_Delaunay_triangulation_2.qrc)
-qt6_wrap_ui(CD_UI_FILES Constrained_Delaunay_triangulation_2.ui)
-# The executable itself.
-add_executable(
+qt_add_executable(
   Constrained_Delaunay_triangulation_2
-  Constrained_Delaunay_triangulation_2.cpp ${CD_UI_FILES}
-  ${CGAL_Qt6_RESOURCE_FILES} ${CD_RES_FILE})
+  Constrained_Delaunay_triangulation_2.cpp
+  Constrained_Delaunay_triangulation_2.ui Constrained_Delaunay_triangulation_2.qrc)
 target_link_libraries(Constrained_Delaunay_triangulation_2
                       PRIVATE CGAL::CGAL CGAL::CGAL_Qt6 Qt6::Widgets)
 target_include_directories(Constrained_Delaunay_triangulation_2
@@ -48,12 +38,9 @@ add_to_cached_list(CGAL_EXECUTABLE_TARGETS Constrained_Delaunay_triangulation_2)
 #--------------------------------
 # The "Delaunay" demo: Delaunay_triangulation_2
 #--------------------------------
-qt6_wrap_ui(D_UI_FILES Delaunay_triangulation_2.ui)
-qt6_add_resources(D_RES_FILE Delaunay_triangulation_2.qrc)
-# The executable itself.
-add_executable(
-  Delaunay_triangulation_2 Delaunay_triangulation_2.cpp ${D_UI_FILES}
-                           ${CGAL_Qt6_RESOURCE_FILES} ${D_RES_FILE})
+qt_add_executable(
+  Delaunay_triangulation_2 Delaunay_triangulation_2.cpp
+  Delaunay_triangulation_2.ui Delaunay_triangulation_2.qrc)
 target_link_libraries(Delaunay_triangulation_2
                       PRIVATE CGAL::CGAL CGAL::CGAL_Qt6 Qt6::Widgets)
 
@@ -63,12 +50,9 @@ add_to_cached_list(CGAL_EXECUTABLE_TARGETS Delaunay_triangulation_2)
 # The "Regular" demo: Regular_triangulation_2
 #--------------------------------
 
-# The executable itself.
-qt6_add_resources(R_RES_FILE Regular_triangulation_2.qrc)
-qt6_wrap_ui(R_UI_FILES Regular_triangulation_2.ui)
-add_executable(
-  Regular_triangulation_2 Regular_triangulation_2.cpp ${R_UI_FILES}
-                          ${CGAL_Qt6_RESOURCE_FILES} ${R_RES_FILE})
+qt_add_executable(
+  Regular_triangulation_2 Regular_triangulation_2.cpp
+  Regular_triangulation_2.ui Regular_triangulation_2.qrc)
 target_link_libraries(Regular_triangulation_2 PRIVATE CGAL::CGAL CGAL::CGAL_Qt6
                                                       Qt6::Widgets)
 
