--- a/.github/workflows/cmake-all.yml
+++ b/.github/workflows/cmake-all.yml
@@ -20,7 +20,7 @@ jobs:
         mkdir build && cd build && CXX=clang++ cmake -DWITH_examples=ON -DWITH_tests=ON -DWITH_demos=ON -DBUILD_TESTING=ON ..
         ctest -L Installation -j $(getconf _NPROCESSORS_ONLN)
 
-  cmake-testsuite-with-qt5:
+  cmake-testsuite-with-qt:
 
     runs-on: ubuntu-latest
 
