--- a/Installation/cmake/modules/CGALConfig_binary.cmake.in
+++ b/Installation/cmake/modules/CGALConfig_binary.cmake.in
@@ -93,8 +93,6 @@ set(CGAL_ImageIO_USE_ZLIB                 "@CGAL_ImageIO_USE_ZLIB@" )
 
 set(CGAL_VERSION "${CGAL_MAJOR_VERSION}.${CGAL_MINOR_VERSION}.${CGAL_BUGFIX_VERSION}")
 
-set(CGAL_USE_FILE "${CGAL_MODULES_DIR}/UseCGAL.cmake" )
-
 if ( CGAL_FIND_REQUIRED )
   set( CHECK_CGAL_COMPONENT_MSG_ON_ERROR TRUE        )
   set( CHECK_CGAL_COMPONENT_ERROR_TYPE   FATAL_ERROR )
@@ -169,7 +167,7 @@ foreach( CGAL_COMPONENT ${CGAL_FIND_COMPONENTS} )
 endforeach()
 
 # Starting with cmake 2.6.3, CGAL_FIND_COMPONENTS is cleared out when find_package returns.
-# But we need it within UseCGAL.cmake, so we save it aside into another variable
+# But we need it within CGAL_CreateSingleSourceCGALProgram.cmake, so we save it aside into another variable
 set( CGAL_REQUESTED_COMPONENTS ${CGAL_FIND_COMPONENTS} )
 
 # for preconfigured libs
